--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Bezobrazz/goit-node-cli/issues"
   },
-  "homepage": "https://github.com/Bezobrazz/goit-node-cli#readme"
+  "homepage": "https://github.com/Bezobrazz/goit-node-cli#readme",
+  "dependencies": {
+    "commander": "^12.0.0"
+  }
 }
